--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="#">ანბანი</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">პროექტის შესახებ</a>
+                        <a class="nav-link" href="about-project.html">პროექტის შესახებ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="contact.html">კონტაქტი</a>
@@ -77,15 +77,10 @@
         </section>
 
         <!-- soc footer -->
-        <footer>
-            <div class="col-3 m-auto contact-soc-item soc d-flex justify-content-around align-items-center">
-                <div class="fb d-flex justify-content-center align-items-center">
-                    <i class="fi flaticon-fb"></i>
-                </div>
-                <div class="tw d-flex justify-content-center align-items-center">
+        <footer class="foot">
+            <div class="col-3 m-auto soc d-flex justify-content-around align-items-center">
+                    <i class="fi flaticon-fb_round"></i>
                     <i class="fi flaticon-tw_round"></i>
-                </div>
-                <div class="in d-flex justify-content-center align-items-center">
                     <i class="fi flaticon-in_round"></i>
                 </div>
             </div>
