--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../scss/libraries/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./Scss/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155006442-1"></script>
     <script>
@@ -27,7 +27,7 @@
             <nav class="navbar navbar-expand-lg  justify-content-between">
                 <!-- logo -->
                 <a class="navbar-brand header-logo" href="../../../"><img
-                        src="../../../New-header-vue/header-img/Header-logo.svg" alt="logo" class="logo"></a>
+                        src="./img/logo.svg" alt="logo" class="logo"></a>
 
                 <!-- Links -->
                 <ul class="navbar-nav">
@@ -51,9 +51,9 @@
         <!-- content card -->
         <section id="mainPage">
             <div class="row contact-box">
-                <div class="col-12 m-auto d-flex justify-content-center contact-content_item">
+                <div class="col-12 d-flex justify-content-center contact-content_item">
                     <div class="contact-img_1">
-                        <img src="../About-app/img/contact/contact-img-1.svg" alt="img">
+                        <img src="./img/contact/contact-img-1.svg" alt="img">
                     </div>
                     <div class="card card-item">
                         <div class="card-body">
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="contact-img_2">
-                        <img src="../About-app/img/contact/contact-img-2.svg" alt="img">
+                        <img src="./img/contact/contact-img-2.svg" alt="img">
                     </div>
                 </div>
             </div>
