--- a/about-project.html
+++ b/about-project.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../scss/libraries/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./Scss/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155006442-1"></script>
     <script>
@@ -26,7 +26,7 @@
         <header>
             <div class="navbar navbar-expand-lg navbar-light bg-transparent">
                 <a class="navbar-brand header-logo">
-                    <img src="img/about-project/logo.svg" alt="logo" class="logo">
+                    <img src="img/logo.svg" alt="logo" class="logo">
                 </a>
                 <ul class="navbar-nav m-auto  d-flex justify-content-around align-items-center">
                     <li class="nav-item">ანბანი</li>
