--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
         <!-- content card -->
         <section id="mainPage">
             <div class="row contact-box">
-                <div class="col-12 d-flex justify-content-center contact-content_item">
+                <div class="col-12 m-auto d-flex justify-content-center contact-content_item">
                     <div class="contact-img_1">
                         <img src="./img/contact/contact-img-1.svg" alt="img">
                     </div>
@@ -78,7 +78,7 @@
 
         <!-- soc footer -->
         <footer class="foot">
-            <div class="col-3 m-auto soc d-flex justify-content-around align-items-center">
+            <div class="col-2 m-auto soc d-flex justify-content-around align-items-center">
                     <i class="fi flaticon-fb_round"></i>
                     <i class="fi flaticon-tw_round"></i>
                     <i class="fi flaticon-in_round"></i>
