fixes about-project

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
         gtag('config', 'UA-155006442-1');
     </script>
-    <title>Document</title>
+    <title>კონტაქტი</title>
 </head>
 
 <body>
