--- a/about-project.html
+++ b/about-project.html
@@ -23,15 +23,24 @@
 
 <body>
     <div class="container main-box_relative about">
+        <!-- header -->
         <header>
             <div class="navbar navbar-expand-lg navbar-light bg-transparent">
+                <!-- logo -->
                 <a class="navbar-brand header-logo">
-                    <img src="img/logo.svg" alt="logo" class="logo">
+                    <img src="./img/logo.svg" alt="logo" class="logo">
                 </a>
+                <!-- Links -->
                 <ul class="navbar-nav m-auto  d-flex justify-content-around align-items-center">
-                    <li class="nav-item">ანბანი</li>
-                    <li class="nav-item">პროექტის შესახებ</li>
-                    <li class="nav-item">კონტაქტი</li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">ანბანი</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="about-project.html">პროექტის შესახებ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="contact.html">კონტაქტი</a>
+                    </li>
                 </ul>
                 <div class="user ml-auto">
                     <i class="fi flaticon-user"></i>
