--- a/about-project-1.html
+++ b/about-project-1.html
@@ -72,16 +72,16 @@
                   </div>
              </div>
          </div>
-         <figure class="is-128x128 ladybird">
-            <img src="./img/about-project/ladybird.svg" class="ladybird">
-        </figure>
-        <figure class="is-fly">
-            <img src="./img/about-project/fly.svg" class="fly">
-        </figure>
      </div>
+     <div class="is-128x128 ladybird">
+        <img src="./img/about-project/ladybird.svg" class="ladybird">
+     </div>
+    <div class="is-fly">
+        <img src="./img/about-project/fly.svg" class="is-fly">
+    </div>
      <footer class="footer is-footer">
         <div class="content has-text-centered is-soc ">
-            <div class="is-soc fb ">
+            <div class=" ">
                     <i class="fi flaticon-fb_round fb"></i>
                     <i class="fi flaticon-tw_round fb"></i>
                     <i class="fi flaticon-in_round fb"></i>
