--- a/about-project-1.html
+++ b/about-project-1.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container header">
         <!--Header Section-->
-        <nav class="navbar pt-30px" role="navigation" aria-label="main navigation">
+        <nav class="navbar header" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="logo" href="#">
                     <img src="./img/logo.svg" class="logo">
@@ -26,13 +26,13 @@
                 </a>
             </div>
 
-            <div id="navbarBasicExample" class="navbar-menu is-primary is-family-primary">
-                <div class="navbar-start is-menu-center">
-                    <a class="navbar-item">
+            <div class="navbar-menu is-family-primary ">
+                <div class="navbar-start is-center ">
+                    <a class="navbar-item ">
                         ანბანი
                     </a>
 
-                    <a class="navbar-item ">
+                    <a class="navbar-item active ">
                        პროექტის შესახებ
                     </a>
                     <a class="navbar-item">
@@ -55,10 +55,10 @@
     </div>
 
  <!--Card Section-->
- <div class="container section">
+ <div class="container card-container ">
      
      <div class="columns">
-         <div class="column is-10">
+         <div class="column is-9 is-center">
              <div class="card is-card">
                     <div class="card-content">
                         <div class="media-content">
@@ -73,13 +73,13 @@
              </div>
          </div>
      </div>
-     <div class="is-128x128 ladybird">
+     <div>
         <img src="./img/about-project/ladybird.svg" class="ladybird">
      </div>
     <div class="is-fly">
         <img src="./img/about-project/fly.svg" class="is-fly">
     </div>
-     <footer class="footer is-footer">
+     <footer class="footer">
         <div class="content has-text-centered is-soc ">
             <div class=" ">
                     <i class="fi flaticon-fb_round fb"></i>
@@ -87,7 +87,7 @@
                     <i class="fi flaticon-in_round fb"></i>
             </div>
         </div>
-      </footer>
+    </footer>
 
 
 </body>
