contact-bulma change

--- a/contact-1.html
+++ b/contact-1.html
@@ -8,10 +8,10 @@
     <title>ლექსიკონი</title>
 </head>
 <body>
-    <div class="container is-after-body">
-        <nav class="navbar is-navbar" role="navigation" aria-label="main navigation">
+    <div class="container">
+        <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item header-logo" href="#">
+                <a class="navbar-item" href="#">
                     <img src="./img/logo.svg" alt="logo">
                 </a>
 
@@ -32,7 +32,7 @@
                     </a>
                     <a class="navbar-item is-navbar_line active">
                         კონტაქტი
-                    </a>
+                    </a>    
                 </div>
 
                 <div class="navbar-end is-primary is-navbar-end">
