fixes about-project

--- a/about-project-1.html
+++ b/about-project-1.html
@@ -28,14 +28,14 @@
 
             <div class="navbar-menu is-family-primary ">
                 <div class="navbar-start is-center ">
-                    <a class="navbar-item ">
+                    <a class="navbar-item is-navbar_line">
                         ანბანი
                     </a>
 
-                    <a class="navbar-item active ">
+                    <a class="navbar-item is-navbar_line active ">
                        პროექტის შესახებ
                     </a>
-                    <a class="navbar-item">
+                    <a class="navbar-item is-navbar_line">
                         კონტაქტი
                      </a>
 
