--- a/about-project.html
+++ b/about-project.html
@@ -4,85 +4,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <link rel="stylesheet" href="./Scss/style.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155006442-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-
-        gtag('config', 'UA-155006442-1');
-    </script>
     <title>პროექტის შესახებ</title>
 </head>
 
 <body>
-    <div class="container main-box_relative about">
-        <!-- header -->
-        <header>
-            <div class="navbar navbar-expand-lg navbar-light bg-transparent">
-                <!-- logo -->
-                <a class="navbar-brand header-logo">
-                    <img src="./img/logo.svg" alt="logo" class="logo">
+    <div class="container header">
+        <!--Header Section-->
+        <nav class="navbar header" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="logo" href="#">
+                    <img src="./img/logo.svg" class="logo">
                 </a>
-                <!-- Links -->
-                <ul class="navbar-nav m-auto  d-flex justify-content-around align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">ანბანი</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="about-project.html">პროექტის შესახებ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="contact.html">კონტაქტი</a>
-                    </li>
-                </ul>
-                <div class="user ml-auto">
-                    <i class="fi flaticon-user"></i>
-                </div>
-            </div>
-        </header>
-        <section class="content">
-            <div class="ladybird position-relative">
-                <img src="img/about-project/ladybird.svg" alt="ladybird" class="position-absolute">
-            </div>
-            <div class="card col-10 m-auto">
-                <div class="card-body position-relative">
-                    <h5 class="card-title pt-2vh">რატომ ვიყენებთ მას?</h5>
-                    <p class="card-text">ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება
-                        მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე
-                        მეტ-ნაკლებად სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე.<br><br>
 
-                        შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური
-                        საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის
-                        შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ.
-                        <br><br>
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                    data-target="navbarBasicExample">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
 
-                        წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო,
-                        ზოგი კი — განზრახ, ხუმრობით.
-                    </p>
+            <div class="navbar-menu is-family-primary ">
+                <div class="navbar-start is-center ">
+                    <a class="navbar-item is-navbar_line">
+                        ანბანი
+                    </a>
+
+                    <a class="navbar-item is-navbar_line active ">
+                       პროექტის შესახებ
+                    </a>
+                    <a class="navbar-item is-navbar_line">
+                        კონტაქტი
+                     </a>
+
+                </div>
+
+                <div class="navbar-end is-primary">
+                    <div class="navbar-item">
+                        <button class="button is-rounded is-user">
+                            <span class="icon">
+                                <i class="fi flaticon-user "></i>
+                            </span>
+                        </button>
+                    </div>
                 </div>
             </div>
-        </section>
-        <div class="fly">
-            <img src="img/about-project/fly.svg" alt="fly">
-        </div>
-        <section class="footer">
-            <footer>
-                <div class="soc m-auto col-3">
-                    <i class="fi flaticon-fb_round"></i>
-                    <i class="fi flaticon-tw_round"></i>
-                    <i class="fi flaticon-in_round"></i>
-                    <!-- ფონტის გამოსაყენებლად i თაგს უნდა ქონდეს აუცილებლად ცლასი fi და იცონის დასახელება რომებსაც აქაც ნახავთ და _flaticon.scss-ში -->
-                </div>
-            </footer>
-        </section>
+        </nav>
     </div>
+
+ <!--Card Section-->
+ <div class="container card-container ">
+     
+     <div class="columns">
+         <div class="column is-9 is-center">
+             <div class="card is-card">
+                    <div class="card-content card-content-1">
+                        <div class="media-content">
+                          <p class="title is-4  is-card-title">რატომ ვიყენებთ მას?</p>
+                        </div>
+                      </div>
+                  
+                      <div class="content is-card-text is-family-secondary">
+                        ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე.<br><br> შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ.<br><br>წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.
+                      </div>
+                  </div>
+             </div>
+         </div>
+     </div>
+     <div>
+        <img src="./img/about-project/ladybird.svg" class="ladybird">
+     </div>
+    <div class="is-fly">
+        <img src="./img/about-project/fly.svg" class="is-fly">
+    </div>
+     <footer class="footer">
+        <div class="content has-text-centered is-soc ">
+            <div class=" ">
+                    <i class="fi flaticon-fb_round fb"></i>
+                    <i class="fi flaticon-tw_round fb"></i>
+                    <i class="fi flaticon-in_round fb"></i>
+            </div>
+        </div>
+    </footer>
+
+
 </body>
 
 </html>
