--- a/contact.html
+++ b/contact.html
@@ -1,91 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <link rel="stylesheet" href="./Scss/style.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155006442-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-155006442-1');
-    </script>
-    <title>კონტაქტი</title>
+    <title>ლექსიკონი</title>
 </head>
-
 <body>
-    <div class="container" id="contact-app">
-        <!-- header -->
-        <header id="app" class="container contact-header_box">
-            <nav class="navbar navbar-expand-lg  justify-content-between">
-                <!-- logo -->
-                <a class="navbar-brand header-logo" href="../../../"><img
-                        src="./img/logo.svg" alt="logo" class="logo"></a>
+    <div class="container">
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="#">
+                    <img src="./img/logo.svg" alt="logo">
+                </a>
 
-                <!-- Links -->
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">ანბანი</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about-project.html">პროექტის შესახებ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">კონტაქტი</a>
-                    </li>
-                </ul>
-                <!-- user -->
-                <div class="user user-item">
-                    <i class="fi flaticon-user"></i>
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                    data-target="navbarBasicExample">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+            <div id="navbarBasicExample" class="navbar-menu is-primary is-family-primary">
+                <div class="navbar-start is-menu-center">
+                    <a class="navbar-item is-navbar_line">
+                        ანბანი
+                    </a>
+                    <a class="navbar-item is-navbar_line">
+                       პროექტის შესახებ
+                    </a>
+                    <a class="navbar-item is-navbar_line active">
+                        კონტაქტი
+                    </a>    
                 </div>
-            </nav>
-        </header>
 
-        <!-- content card -->
-        <section id="mainPage">
-            <div class="row contact-box">
-                <div class="col-12 m-auto d-flex justify-content-center contact-content_item">
-                    <div class="contact-img_1">
-                        <img src="./img/contact/contact-img-1.svg" alt="img">
+                <div class="navbar-end is-primary is-navbar-end">
+                    <div class="navbar-item">
+                        <button class="button is-rounded">
+                            <span class="icon">
+                                <i class="fi flaticon-user"></i>
+                            </span>
+                        </button>
                     </div>
-                    <div class="card card-item">
-                        <div class="card-body">
-                            <h5 class="card-title">კონტაქტი</h5>
-                            <p class="card-text card-text-top">Adresse : IMPACT, Chaussée de Vleurgat 195, 1050 Ixelles
-                            </p>
-                            <p class="card-text">Tél. Machin : +32 484 26 26 26</p>
-                            <p class="card-text"> Tél. Truc : +32 484 26 26 26</p>
-                            <p class="card-text">
-                                Mail : <a href="#" class="text-decoration-underline"> info@impact.org</a>
-                            </p>
-                            <p class="card-text card-text-top"> IBAN : BE 32 484 26 77 94 </p>
-                            <p class="card-text">BIC : BE 32 484 26 77 94</p>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="container section">
+        <div class="columns is-centered ml-6">
+            <div class="column is-1 ml-6">
+                <img src="./img/contact/contact-img-1.svg" class="contact-img_1" alt="img">
+            </div>
+            <div class="column is-6 mt-4">
+                <div class="card is-card-content-item is-mobile">
+                    <div class="card-content">
+                        <div class="media-content">
+                          <p class="title is-card-title-item">კონტაქტი</p>
                         </div>
                     </div>
-                    <div class="contact-img_2">
-                        <img src="./img/contact/contact-img-2.svg" alt="img">
+                     
+                    <div class="content is-family-secondary">
+                        <p class="is-card-text-item">Adresse : IMPACT, Chaussée de Vleurgat 195, 1050 Ixelles
+                        </p>
+                        <p class="is-card-text-item">Tél. Machin : +32 484 26 26 26</p>
+                        <p class="is-card-text-item"> Tél. Truc : +32 484 26 26 26</p>
+                        <p class="is-card-text-item is-card-text-top">
+                            Mail : <a href="#" class="text-decoration-underline"> info@impact.org</a>
+                        </p>
+                        <p class="is-card-text-item "> IBAN : BE 32 484 26 77 94 </p>
+                        <p class="is-card-text-item">BIC : BE 32 484 26 77 94</p>
                     </div>
                 </div>
             </div>
-        </section>
-
-        <!-- soc footer -->
-        <footer class="foot">
-            <div class="col-2 m-auto soc d-flex justify-content-around align-items-center">
-                    <i class="fi flaticon-fb_round"></i>
-                    <i class="fi flaticon-tw_round"></i>
-                    <i class="fi flaticon-in_round"></i>
+            <div class="column is-2">
+                <img src="./img/contact/contact-img-2.svg" class="contact-img_2" alt="img">
+            </div>
+        </div>
+    </div>
+     <!-- soc footer -->
+     <footer class="footer">
+        <div class="content has-text-centered is-soc-item">
+            <div class="columns">
+                <div class="column is-2 is-soc-item">
+                    <span class="is-soc-content">
+                        <i class="fi flaticon-fb_round"></i>
+                    </span>
+                    <span class="is-soc-content">
+                        <i class="fi flaticon-tw_round"></i>
+                    </span>
+                    <span class="is-soc-content">
+                        <i class="fi flaticon-in_round"></i>
+                    </span>
                 </div>
             </div>
-        </footer>
-    </div>
+        </div>
+      </footer>
 </body>
-
 </html>
