--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div class="container">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="#">
+                <a class="navbar-item" href="index.html">
                     <img src="./img/logo.svg" alt="logo">
                 </a>
 
@@ -83,15 +83,15 @@
         <div class="content has-text-centered is-soc-item">
             <div class="columns">
                 <div class="column is-2 is-soc-item">
-                    <span class="is-soc-content">
+                    <a class="is-soc-content">
                         <i class="fi flaticon-fb_round"></i>
-                    </span>
-                    <span class="is-soc-content">
+                    </a>
+                    <a class="is-soc-content">
                         <i class="fi flaticon-tw_round"></i>
-                    </span>
-                    <span class="is-soc-content">
+                    </a>
+                    <a class="is-soc-content">
                         <i class="fi flaticon-in_round"></i>
-                    </span>
+                    </a>
                 </div>
             </div>
         </div>
