--- a/about-project.html
+++ b/about-project.html
@@ -10,12 +10,11 @@
 </head>
 
 <body>
-    <div class="container header">
-        <!--Header Section-->
-        <nav class="navbar header" role="navigation" aria-label="main navigation">
+    <div class="container">
+        <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="logo" href="#">
-                    <img src="./img/logo.svg" class="logo">
+                <a class="navbar-item" href="index.html">
+                    <img src="./img/logo.svg" alt="logo">
                 </a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -25,27 +24,24 @@
                     <span aria-hidden="true"></span>
                 </a>
             </div>
-
-            <div class="navbar-menu is-family-primary ">
-                <div class="navbar-start is-center ">
+            <div id="navbarBasicExample" class="navbar-menu is-primary is-family-primary">
+                <div class="navbar-start is-menu-center">
                     <a class="navbar-item is-navbar_line">
                         ანბანი
                     </a>
-
-                    <a class="navbar-item is-navbar_line active ">
+                    <a class="navbar-item is-navbar_line">
                        პროექტის შესახებ
                     </a>
-                    <a class="navbar-item is-navbar_line">
+                    <a class="navbar-item is-navbar_line active">
                         კონტაქტი
-                     </a>
-
+                    </a>    
                 </div>
 
-                <div class="navbar-end is-primary">
+                <div class="navbar-end is-primary is-navbar-end">
                     <div class="navbar-item">
-                        <button class="button is-rounded is-user">
+                        <button class="button is-rounded">
                             <span class="icon">
-                                <i class="fi flaticon-user "></i>
+                                <i class="fi flaticon-user"></i>
                             </span>
                         </button>
                     </div>
@@ -53,12 +49,11 @@
             </div>
         </nav>
     </div>
-
  <!--Card Section-->
  <div class="container card-container ">
      
      <div class="columns">
-         <div class="column is-9 is-center">
+         <div class="column is-9 is-menu-center">
              <div class="card is-card">
                     <div class="card-content card-content-1">
                         <div class="media-content">
@@ -79,15 +74,23 @@
     <div class="is-fly">
         <img src="./img/about-project/fly.svg" class="is-fly">
     </div>
-     <footer class="footer">
-        <div class="content has-text-centered is-soc ">
-            <div class=" ">
-                    <i class="fi flaticon-fb_round fb"></i>
-                    <i class="fi flaticon-tw_round fb"></i>
-                    <i class="fi flaticon-in_round fb"></i>
+    <footer class="footer">
+        <div class="content has-text-centered is-soc-item">
+            <div class="columns">
+                <div class="column is-2 is-soc-item">
+                    <a class="is-soc-content">
+                        <i class="fi flaticon-fb_round"></i>
+                    </a>
+                    <a class="is-soc-content">
+                        <i class="fi flaticon-tw_round"></i>
+                    </a>
+                    <a class="is-soc-content">
+                        <i class="fi flaticon-in_round"></i>
+                    </a>
+                </div>
             </div>
         </div>
-    </footer>
+      </footer>
 
 
 </body>
