--- a/about-project.html
+++ b/about-project.html
@@ -27,15 +27,15 @@
             </div>
 
             <div class="navbar-menu is-family-primary ">
-                <div class="navbar-start is-center ">
+                <div class="navbar-start is-menu-center">
                     <a class="navbar-item is-navbar_line">
                         ანბანი
                     </a>
 
-                    <a class="navbar-item is-navbar_line active ">
+                    <a class="navbar-item is-navbar_line active">
                        პროექტის შესახებ
                     </a>
-                    <a class="navbar-item is-navbar_line">
+                    <a class="navbar-item is-navbar_line" href="contact.html">
                         კონტაქტი
                      </a>
 
