--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                     <a class="navbar-item is-navbar_line">
                         ანბანი
                     </a>
-                    <a class="navbar-item is-navbar_line">
+                    <a class="navbar-item is-navbar_line" href="about-project.html">
                        პროექტის შესახებ
                     </a>
                     <a class="navbar-item is-navbar_line active">
