--- a/error-page.html
+++ b/error-page.html
@@ -9,14 +9,11 @@
 </head>
 <body>
     <div class="container">
-    <div class="numbers is-size-12 is-warning">
-        404
-    </div>
     <div>
-        <img src="./img/about-project/ladybird.svg" class="ladybird-error">
+        <img src="./img/404-error.svg" class="error-404 absolute">
     </div>
     </div>
-    <section class="section text-section">
+    <section class="section text-section absolute">
         <div class="container">
           <h2 class="subtitle is-primary error-subtitle">
           როგორც ჩანს, გვერდი, რომელსაც თქვენ ეძებთ, არ მოიძებნა.
@@ -27,11 +24,10 @@
 
         <div class="content has-text-centered is-soc-item">
          <div class="img">
-             <img src="img/contact/contact-img-1.svg" class="fly-error">
+             <img src="img/contact/contact-img-1.svg" class="fly-error absolute">
          </div>
-         <button class="button is-primary  error-button round-button">
-             <a class="error-click"href="index.html">უკან დაბრუნება
-             </a>
+         <button class="button is-primary  error-button round-button absolute">
+             <a class="error-click absolute"href="index.html">უკან დაბრუნება</a>
              </button>
         </div>
 </body>
