--- a/about-project.html
+++ b/about-project.html
@@ -101,13 +101,13 @@
                 <div class="column is-one-fifth-desktop is-one-quarter-tablet is-three-fifths-mobile">
                     <div class="is-flex is-justify-around">
                         <a class="button is-rounded has-text-primary">
-                            <i class="fi flaticon-fb"></i>
+                            <i class="fi fb"></i>
                         </a>
                         <a class="button is-rounded has-text-primary">
-                            <i class="fi flaticon-tw"></i>
+                            <i class="fi tw"></i>
                         </a>
                         <a class="button is-rounded has-text-primary">
-                            <i class="fi flaticon-in"></i>
+                            <i class="fi in"></i>
                         </a>
                     </div>
                 </div>
