--- a/auth.html
+++ b/auth.html
@@ -42,7 +42,7 @@
                 <div class="navbar-item">
                     <button class="button is-rounded">
                         <span class="icon">
-                            <i class="fi flaticon-user"></i>
+                            <i class="fi user"></i>
                         </span>
                     </button>
                 </div>
@@ -103,13 +103,13 @@
                 <div class="column is-one-fifth-desktop is-one-quarter-tablet is-three-fifths-mobile">
                     <div class="is-flex is-justify-around">
                         <a class="button is-rounded has-text-primary">
-                            <i class="fi flaticon-fb"></i>
+                            <i class="fi fb"></i>
                         </a>
                         <a class="button is-rounded has-text-primary">
-                            <i class="fi flaticon-tw"></i>
+                            <i class="fi tw"></i>
                         </a>
                         <a class="button is-rounded has-text-primary">
-                            <i class="fi flaticon-in"></i>
+                            <i class="fi in"></i>
                         </a>
                     </div>
                 </div>
