--- a/auth.html
+++ b/auth.html
@@ -14,7 +14,7 @@
     <div class="container">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="column is-half navbar-brand ">
-                <a class="navbar-item" href="index.html">
+                <a  href="index.html">
                     <img src="./img/logo.svg" alt="logo" class="is-header-logo">
                 </a>
 
