--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <div class="container">
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="column is-half navbar-brand ">
-                <a class="navbar-item" href="index.html">
+                <a href="index.html">
                     <img src="./img/logo.svg" alt="logo" class="is-header-logo">
                 </a>
 
@@ -42,7 +42,7 @@
                 <div class="navbar-item">
                     <button class="button is-rounded">
                         <span class="icon">
-                            <i class="fi fber"></i>
+                            <i class="fi user"></i>
                         </span>
                     </button>
                 </div>
