main-page update

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="column is-half navbar-brand ">
+            <div class="column  navbar-brand ">
                 <a href="index.html">
                     <img src="./img/logo.svg" alt="logo" class="is-header-logo">
                 </a>
@@ -85,7 +85,7 @@
 
     <!-- soc footer -->
     <footer class="footer">
-        <div class="content has-text-centered is-soc-item">
+        <div class="content has-text-centered ">
             <div class="columns is-centered is-mobile">
                 <div class="column is-one-fifth-desktop is-one-quarter-tablet is-three-fifths-mobile">
                     <div class="is-flex is-justify-around">
