--- a/main-page.html
+++ b/main-page.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="column is-half navbar-brand ">
+            <div class="column navbar-brand ">
                 <a  href="index.html">
                     <img src="./img/logo.svg" alt="logo" class="is-header-logo">
                 </a>
@@ -42,7 +42,7 @@
                 <div class="navbar-item">
                     <button class="button is-rounded">
                         <span class="icon">
-                            <i class="fi flaticon-user"></i>
+                            <i class="fi user"></i>
                         </span>
                     </button>
                 </div>
@@ -73,24 +73,184 @@
                 </div>
             </div>
             <div class="container ">
+                <div>
+                    <img src="./img/main-page/yellow-ladybird.svg" alt="ladybird" class="yellow-ladybird">
+                </div>
                 <div class="columns is-mobile is-centered">
-                    <div class="column is-half-desktop is-four-fifths-tablet is-full-mobile is-width">
-                        <div class="card mt-5 is-width">
-                            <img src="./img/main-page/yellow-ladybird.svg" alt="ladybird">
+                    <div class="column is-half-desktop is-four-fifths-tablet is-full-mobile" style="width:714px; height:185px;">
+                        <div class="card mt-5">
+                            <div class="padding-top">
                             <div class="is-family-secondary padding-left">
-                                <img src="img/main-page/user-icon.svg" alt="icon" class="user">
-                                <img src="img/main-page/mark.svg" alt="icon" class="i">
-                                <p class="title has-text-weight-bold has-text-primary is-size-7 text-style">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-weight-bold has-text-primary is-size-7 text-style is-inline-block">
                                     Lorem ipsum
                                   </p>
                             </div>
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
+                                    ლორემ იფსუმ
+                                  </p>
+                            </div>
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
+                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+                                  </p>
+                            </div>
+                            </div>
                                  <div>
-                                     <input type="image" src="img/main-page/share.svg" alt="share">
+                                     <img src="img/main-page/share.svg" alt="share">
                                  </div>
-                                    <button class="button  round-button">
+                                    <button class="button click-button">
                                         <a class="click"href="index.html">სრულად</a>
                                      </button>
                         </div>
+                        <div class="card mt-5">
+                            <div class="padding-top">
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-weight-bold has-text-primary is-size-7 text-style is-inline-block">
+                                    Lorem ipsum
+                                  </p>
+                            </div>
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
+                                    ლორემ იფსუმ
+                                  </p>
+                            </div>
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
+                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+                                  </p>
+                            </div>
+                            </div>
+                                 <div>
+                                     <img src="img/main-page/share.svg" alt="share">
+                                 </div>
+                                    <button class="button click-button">
+                                        <a class="click"href="index.html">სრულად</a>
+                                     </button>
+                        </div>
+                        <div class="card mt-5">
+                            <div class="padding-top">
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-primary is-size-7 text-style is-inline-block">
+                                    Lorem ipsum
+                                  </p>
+                            </div>
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
+                                    ლორემ იფსუმ
+                                  </p>
+                            </div>
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
+                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+                                  </p>
+                            </div>
+                            </div>
+                                 <div>
+                                     <img src="img/main-page/share.svg" alt="share">
+                                 </div>
+                                    <button class="button click-button">
+                                        <a class="click"href="index.html">სრულად</a>
+                                     </button>
+                        </div>
+                        <div class="card mt-5">
+                            <div class="padding-top">
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title  has-text-primary is-size-7 text-style is-inline-block">
+                                    Lorem ipsum
+                                  </p>
+                            </div>
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
+                                    ლორემ იფსუმ
+                                  </p>
+                            </div>
+                            <div class="is-family-secondary padding-left">
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <a class=" has-text-primary">
+                                    <i class="fi user"></i>
+                                </a>
+                                <p class="title has-text-grey-lighter is-size-7 text-style is-inline-block">
+                                    საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+                                  </p>
+                            </div>
+                            </div>
+                                 <div>
+                                     <img src="img/main-page/share.svg" alt="share">
+                                 </div>
+                                    <button class="button click-button">
+                                        <a class="click"href="index.html">სრულად</a>
+                                     </button>
+                        </div>
+                        
                         
                     </div>
                 </div>
@@ -101,19 +261,19 @@
 
 
     <!-- soc footer -->
-    <footer class="footer" style="margin-top:50vh">
-        <div class="content has-text-centered is-soc-item">
+    <footer class="footer" style="margin-top: 80vh;">
+        <div class="content has-text-centered">
             <div class="columns is-centered is-mobile">
                 <div class="column is-one-fifth-desktop is-one-quarter-tablet is-three-fifths-mobile">
                     <div class="is-flex is-justify-around">
-                        <a class="button is-rounded has-text-primary">
-                            <i class="fi flaticon-fb"></i>
+                        <a class="button is-rounded button-size has-text-primary">
+                            <i class="fi fb"></i>
                         </a>
-                        <a class="button is-rounded has-text-primary">
-                            <i class="fi flaticon-tw"></i>
+                        <a class="button is-rounded button-size has-text-primary">
+                            <i class="fi tw"></i>
                         </a>
-                        <a class="button is-rounded has-text-primary">
-                            <i class="fi flaticon-in"></i>
+                        <a class="button is-rounded button-size has-text-primary">
+                            <i class="fi in"></i>
                         </a>
                     </div>
                 </div>
