--- a/about-project.html
+++ b/about-project.html
@@ -96,7 +96,7 @@
 
     <!-- soc footer -->
     <footer class="footer">
-        <div class="content has-text-centered is-soc-item">
+        <div class="content has-text-centered ">
             <div class="columns is-centered is-mobile">
                 <div class="column is-one-fifth-desktop is-one-quarter-tablet is-three-fifths-mobile">
                     <div class="is-flex is-justify-around">
