--- a/about-project.html
+++ b/about-project.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="column is-half navbar-brand ">
+            <div class="navbar-brand ">
                 <a href="index.html">
                     <img src="./img/logo.svg" alt="logo" class="is-header-logo">
                 </a>
@@ -38,7 +38,7 @@
                     </a>
                 </div>
             </div>
-            <div class="navbar-end is-primary is-navbar-end">
+            <div class="navbar-end is-primary is-navbar-end is-user">
                 <div class="navbar-item">
                     <button class="button is-rounded">
                         <span class="icon">
