--- a/auth.html
+++ b/auth.html
@@ -12,10 +12,28 @@
 
 <body>
     <div class="container">
-        <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand ">
-                <a  href="index.html">
-                    <img src="./img/logo.svg" alt="logo" class="is-header-logo">
+        <nav class="navbar is-transparent " role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <div class="navbar-end is-mobile">
+                    <div class="navbar-item has-dropdown is-hoverable">
+                        <a class="navbar-link is-arrowless is-relative">
+                            <div class="fi user has-text-warning is-flex is-justify-center is-align-end"></div>
+                        </a>
+                        <div class="navbar-dropdown">
+                            <a href="./" class="navbar-item">
+                                რედაქტირება
+                            </a>
+                            <a class="navbar-item">
+                                ჩემი სიტყვები
+                            </a>
+                            <a class="navbar-item">
+                                გამოსვლა
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <a class="navbar-item" href="#">
+                    <img src="./img/logo.svg" width="112" height="28">
                 </a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -25,26 +43,37 @@
                     <span aria-hidden="true"></span>
                 </a>
             </div>
-            <div id="navbarBasicExample" class="navbar-menu is-primary is-family-primary">
-                <div class="navbar-start is-menu-center">
-                    <a class="navbar-item is-navbar_line">
-                        ანბანი
+
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                    <a href="main-page.html" class="navbar-item px-6">
+                        <span class="is-relative">ანბანი</span>
                     </a>
-                    <a class="navbar-item is-navbar_line" href="about-project.html">
-                        პროექტის შესახებ
+                    <a href="about-project.html" class="navbar-item px-6 is-active">
+                        <span class="is-relative">პროექტის შესახებ</span>
                     </a>
-                    <a class="navbar-item is-navbar_line active">
-                        კონტაქტი
+                    <a href="contact.html" class="navbar-item px-6">
+                        <span class="is-relative">კონტაქტი</span>
                     </a>
                 </div>
-            </div>
-            <div class="navbar-end is-primary is-navbar-end is-user">
-                <div class="navbar-item">
-                    <button class="button is-rounded">
-                        <span class="icon">
-                            <i class="fi user"></i>
-                        </span>
-                    </button>
+
+                <div class="navbar-end">
+                    <div class="navbar-item has-dropdown is-hoverable">
+                        <a class="navbar-link is-arrowless is-relative">
+                            <div class="fi user has-text-warning is-flex is-justify-center is-align-end"></div>
+                        </a>
+                        <div class="navbar-dropdown">
+                            <a class="navbar-item">
+                                რედაქტირება
+                            </a>
+                            <a class="navbar-item">
+                                ჩემი სიტყვები
+                            </a>
+                            <a class="navbar-item">
+                                გამოსვლა
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
